# user-authentication-api-actix-sqlx

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  log4rs.yaml
migration/: 001_create_schema.sql  002_create_permission_table.sql  003_create_role_table.sql
migrations/: 0001_create_schema.sql  0002_create_permission_table.up.sql  0003_create_role_table.down.sql  0003_create_role_table.up.sql  0004_create_role_permission_table.down.sql  0004_create_role_permission_table.up.sql  0005_create_user_table.down.sql  0005_create_user_table.up.sql  0006_create_user_credential_table.down.sql  0006_create_user_credential_table.up.sql  0007_create_user_code_table.down.sql  0007_create_user_code_table.up.sql  0007_create_user_role_table.down.sql  0007_create_user_role_table.up.sql  20240104065119_create_permission_table.down.sql  20240104065119_create_permission_table.up.sql  README.md
src/: auth.rs  error.rs  jwt.rs  lib.rs  main.rs  util.rs
src/dao/: dao_context.rs  db_context.rs  mod.rs  permission_dao.rs  role_dao.rs  role_permission_dao.rs  user_code_dao.rs  user_credential_dao.rs  user_dao.rs  user_role_dao.rs
src/dto/: app_response.rs  mod.rs  pagination.rs  user.rs  user_credentials.rs
src/email/: email_confirmation.rs  mod.rs
src/entity/: mod.rs  organisation.rs  permission.rs  role.rs  user.rs  user_code.rs  user_credential.rs  user_credentials.rs
src/handler/: auth_handler.rs  mod.rs  permission_handler.rs  role_handler.rs  user_handler.rs
src/model/: app_response.rs  claims.rs  jwt_config.rs  mod.rs  pagination.rs  permission.rs  sign_in.rs  sign_up.rs  token_response.rs  unit.rs  user.rs  user_credentials.rs
templates/: email_confirmation_template.html
tests/: test.rs
tests/dao_tests/: db_context_test.rs  mod.rs  permission_dao_test.rs  role_dao_test.rs  role_permission_dao_test.rs  user_credentials_dao_test.rs  user_dao_test.rs  user_role_dao_test.rs
tests/fixtures/: permission.sql  role.sql  role_permission.sql  user.sql  user_credential.sql  user_role.sql
tests/handler_tests/: auth_handler_test.rs  mod.rs  permission_handler_test.rs  role_handler_test.rs  user_handler_test.rs
