[package]
name = "bulk_sms_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio", "macros"] }
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
regex = "1.6.0"
once_cell = "1.13.0"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"
