[package]
name = "bulk_sms_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio", "macros"] }
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
regex = "1.6.0"
once_cell = "1.13.0"
dotenvy = "0.15.7"
actix-web-httpauth = "0.8.1"
jsonwebtoken = {version = "9.2.0", default-features = false }
rust-argon2 = "2.1.0"
rand = "0.8.5"
log = "0.4.21"
log4rs = "1.3.0"

[dev-dependencies]
actix-rt = "2.9.0"
serde_json = "1.0.111"
